@@ -1,5 +1,7 @@
 2003-06-18  Bradley Bell  <btb@icculus.org>
 
+	* main/movie.c: fixed cfile conversion of movielib code
+
 	* main/console.c, main/hud.c: strip out colors, etc when printing
 	to stdout
 
